cluster/gitlab-runners/np.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: gitlab-runners
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-except-internal
  namespace: gitlab-runners
spec:
  podSelector:
    matchLabels:
      app: gitlab-instance-runner-gitlab-runner
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 10.0.0.0/8
              - 172.16.0.0/12
              - 192.168.0.0/16
      ports:
        - protocol: TCP
          port: 443

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-dns
  namespace: gitlab-runners
spec:
  podSelector:
    matchLabels:
      app: gitlab-instance-runner-gitlab-runner
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scrape
  namespace: gitlab-runners
spec:
  podSelector:
    matchLabels:
      app: gitlab-instance-runner-gitlab-runner
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prometheus
    ports:
    - protocol: TCP
      port: 9252

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-internal-gitlab
  namespace: gitlab-runners
spec:
  podSelector:
    matchLabels:
      app: gitlab-instance-runner-gitlab-runner
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gitlab
          podSelector:
            matchLabels:
              app: webservice
